refactor: validate PoC